--- a/PhoSizzlez.html/images.html/Dillon's Profolio_files/Main.css
+++ b/PhoSizzlez.html/images.html/Dillon's Profolio_files/Main.css
@@ -6,9 +6,7 @@ Date last modified: 2/3/2020
 body {
     background-color: #18121E;
     font-family: Arial, Helvetica, sans-serif;
-    color:#984B43;
-    max-width: 900px;
-    margin: 0 auto;
+    color:#984B43
 }
 
 h1 {
