--- a/Portfolio/styles/Form.css
+++ b/Portfolio/styles/Form.css
@@ -2,6 +2,7 @@
 
 label, fieldset{
     font-size: 1.1em;
+    black
 }
 
 input[type=text] {
@@ -14,7 +15,7 @@ input[type=text] {
 }
 
 fieldset {
-    background-color: whitesmoke;
+    background-color: #18121E;
     width: 100%;
     padding: 12px 20px;
     margin: 12px 0;
@@ -28,13 +29,13 @@ select, textarea {
 
 input[type=submit] {
     font-size: 1.2em;
-    background-color: #546a7b;
+    background-color: #18121E;
     color: #fef9ff;
     padding: 4px 8px;
 }
 
 input[type=submit]:hover {
-    background-color: #f2eded;
+    background-color: #18121E;
     color: #546a7b;
 }
 
@@ -46,6 +47,13 @@ textarea {
     box-sizing: border-box;
     border: 2px solid #0d1f2d;
     border-radius: 3px;
-    background-color: #fff;
+    background-color: #18121E;
     resize: none;
 }
+body {
+    background-color:#18121E ;
+    color:#984B43
+
+}
+
+
