--- a/PhoSizzlez.html/restaurantStyles.css
+++ b/PhoSizzlez.html/restaurantStyles.css
@@ -39,6 +39,8 @@ footer {
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 20px;
+    padding-bottom: 10px;
+    padding-top: 20px;
 }
 
 #body {
