--- a/PhoSizzlez.html/restaurantStyles.css
+++ b/PhoSizzlez.html/restaurantStyles.css
@@ -1,3 +1,10 @@
+/*
+Name: Dillon Kiley
+Date Created: 1/27/20
+Most recent revision: 2/21/20
+*/
+
+
 ul a:visited {
     color: pink;
     text-decoration: none;
