--- a/PhoSizzlez.html/restaurantStyles.css
+++ b/PhoSizzlez.html/restaurantStyles.css
@@ -1,5 +1,5 @@
 /*
-Name: Dillon Kiley
+Name: Dillon S Kiley
 Date Created: 1/27/20
 Most recent revision: 2/21/20
 */
@@ -85,6 +85,7 @@ footer {
     text-align: center;
     
 }
+
 
 #row1 {
     background-color: pink;
